# miscreaders

./: .gitignore  .readthedocs.yaml  README.md  conftest.py  pyproject.toml
.github/workflows/: main.yml
docs/: requirements.txt
docs/source/: api-reference.rst  conf.py  index.rst  release-notes.rst
src/miscreaders/: __init__.py
src/miscreaders/loophabit/: __init__.py
src/miscreaders/moonwatch/: __init__.py
src/miscreaders/stayfree/: __init__.py  backup_reader.py  xls_reader.py
tests/: test_loophabit.py  test_moonwatch.py  test_stayfree.py
tests/test_loophabit/: test.db
tests/test_moonwatch/: test1.jsonl
tests/test_stayfree/: test.xls
