[project]
name = "miscreaders"
version = "0.1.0"
description = "Parsers for output of various programs"
readme = "README.md"
authors = [{name = "Tomas Karabela", email = "tkarabela@seznam.cz"}]
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">=3.10"
dependencies = [
    "polars~=1.26",
    "xlrd~=2.0",
]

[project.urls]
Homepage = "https://github.com/tkarabela/miscreaders"
Repository = "https://github.com/tkarabela/miscreaders.git"
Issues = "https://github.com/tkarabela/miscreaders/issues"

[dependency-groups]
dev = [
    "mypy~=1.15",
    "pytest~=8.3",
    "pytest-datadir~=1.6",
    "ruff~=0.11",
    "sybil[pytest]~=9.1.0",
]

[tool.mypy]
strict = "True"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
files = "src/**/*.py, tests/*.py"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = "False"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-p no:doctest",
]
